--- a/libVRender/libVRender.vcxproj.filters
+++ b/libVRender/libVRender.vcxproj.filters
@@ -41,6 +41,9 @@
       <Filter>shaders</Filter>
     </None>
     <None Include="shaders\gen_shaders.bat" />
+    <None Include="shaders\gltf.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -119,6 +122,9 @@
     </ClInclude>
     <ClInclude Include="objects.hpp">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shaders\gltf.h">
+      <Filter>shaders</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
