--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 *.zip
+/webVRender/Emscripten/WebDebug
+/Emscripten/WebDebug/webVRender.wasm
+/Emscripten/WebDebug/webVRender.wasm.map
+/Emscripten/WebDebug/webVRender.js
