--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /Emscripten/WebDebug/webVRender.wasm
 /Emscripten/WebDebug/webVRender.wasm.map
 /Emscripten/WebDebug/webVRender.js
+/etc
