--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /Emscripten/WebDebug/webVRender.wasm.map
 /Emscripten/WebDebug/webVRender.js
 /etc
+/Emscripten/WebDebug/webVRender.data
