--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -51,15 +51,16 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='WebDebug|Emscripten'">
     <ClCompile>
       <AdditionalIncludeDirectories>../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
-      <AdditionalOptions>-s USE_GLFW=3 -g %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
       <OptimizationLevel>O0</OptimizationLevel>
+      <GenerateDebugInformation>FullDebug</GenerateDebugInformation>
     </ClCompile>
     <Link>
-      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING -gsource-map %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
       <LinkerOptimizationLevel>O0</LinkerOptimizationLevel>
       <RunLLVMOptimization>NoLLVMOptimization</RunLLVMOptimization>
-      <GenerateDebugInformation>FullDebugInformation</GenerateDebugInformation>
+      <GenerateDebugInformation>MoreDebugInformation</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
