--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -44,7 +44,7 @@
       <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
-      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING  -lidbfs.js %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
     </Link>
   </ItemDefinitionGroup>
@@ -56,7 +56,7 @@
       <GenerateDebugInformation>FullDebug</GenerateDebugInformation>
     </ClCompile>
     <Link>
-      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING -gsource-map %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING -gsource-map -lidbfs.js %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
       <LinkerOptimizationLevel>O0</LinkerOptimizationLevel>
       <RunLLVMOptimization>NoLLVMOptimization</RunLLVMOptimization>
