--- a/libVRender/libVRender.vcxproj
+++ b/libVRender/libVRender.vcxproj
@@ -87,7 +87,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;.\lib\ozz\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;.\lib\ozz\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8</AdditionalOptions>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -123,7 +123,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;.\lib\ozz\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8</AdditionalOptions>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -154,7 +154,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\lib\imgui\backends;.\lib\glfw\include;.\lib\imgui;.\lib\sokol;.\lib\ozz\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8</AdditionalOptions>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -208,6 +208,7 @@
     <ClInclude Include="lib\imgui\ImGuizmo.h" />
     <ClInclude Include="lib\imgui\implot.h" />
     <ClInclude Include="lib\sokol\sokol_gfx.h" />
+    <ClInclude Include="lib\tinygltf\tiny_gltf.h" />
     <ClInclude Include="messyengine.h" />
     <ClInclude Include="me_impl.h" />
     <ClInclude Include="objects.hpp" />
