--- a/libVRender/libVRender.vcxproj.filters
+++ b/libVRender/libVRender.vcxproj.filters
@@ -68,6 +68,9 @@
     <None Include="shaders\gltf_a.glsl">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\lines_bunch.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
