--- a/webVRender/webVRender.vcxproj.filters
+++ b/webVRender/webVRender.vcxproj.filters
@@ -41,8 +41,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shell.html">
-      <Filter>imgui</Filter>
-    </None>
+    <None Include="shell.html" />
   </ItemGroup>
 </Project>
