--- a/CycleGUIConsole/CycleGuiConsole.csproj
+++ b/CycleGUIConsole/CycleGuiConsole.csproj
@@ -15,6 +15,8 @@
 
 	  <StartupObject>VRenderConsole.Program</StartupObject>
 
+	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -33,6 +35,10 @@
 
   <ItemGroup>
     <EmbeddedResource Include="medulla_1de_icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
