--- a/libVRender/libVRender.vcxproj.filters
+++ b/libVRender/libVRender.vcxproj.filters
@@ -71,6 +71,9 @@
     <None Include="shaders\lines_bunch.glsl">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\sprites.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
