--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -34,6 +34,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Emscripten'">
     <IncludePath>../libVRender;../libVRender/lib/imgui;./includes;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)x64\LibraryDebug\htdocs</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='WebDebug|Emscripten'">
     <IncludePath>../libVRender;../libVRender/lib/imgui;./includes;$(IncludePath)</IncludePath>
@@ -56,11 +57,13 @@
       <GenerateDebugInformation>FullDebug</GenerateDebugInformation>
     </ClCompile>
     <Link>
-      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING -gsource-map -lidbfs.js %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING -gsource-map --source-map-base "http://127.0.0.1:8081/debug/" -lidbfs.js %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
       <LinkerOptimizationLevel>O0</LinkerOptimizationLevel>
       <RunLLVMOptimization>NoLLVMOptimization</RunLLVMOptimization>
       <GenerateDebugInformation>MoreDebugInformation</GenerateDebugInformation>
+      <SourceMapBase>
+      </SourceMapBase>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
