--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -41,17 +41,17 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Emscripten'">
     <ClCompile>
-      <AdditionalIncludeDirectories>../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(EmscriptenDir)/cache/ports/freetype/FreeType-version_1/include;../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
       <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
-      <AdditionalOptions>-sINITIAL_MEMORY=200MB -sSTACK_SIZE=100MB -s ALLOW_MEMORY_GROWTH=1 -lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING  -lidbfs.js  -sEXPORTED_FUNCTIONS=_main,_onmessage,_ontouch -sEXPORTED_RUNTIME_METHODS=ccall,cwrap %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-sASYNCIFY -sASYNCIFY_ADVISE -sASYNCIFY_IGNORE_INDIRECT=1  -sINITIAL_MEMORY=200MB -sSTACK_SIZE=100MB -s ALLOW_MEMORY_GROWTH=1 -lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s USE_FREETYPE=1 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING  -lidbfs.js  -sEXPORTED_FUNCTIONS=_main,_onmessage,_ontouch -sEXPORTED_RUNTIME_METHODS=ccall,cwrap,_malloc %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='WebDebug|Emscripten'">
     <ClCompile>
-      <AdditionalIncludeDirectories>../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(EmscriptenDir)/cache/ports/freetype/FreeType-version_1/include;../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
       <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
       <OptimizationLevel>O0</OptimizationLevel>
       <GenerateDebugInformation>FullDebug</GenerateDebugInformation>
@@ -78,11 +78,15 @@
     <ClCompile Include="..\libVRender\lib\imgui\imgui_widgets.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\implot.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\implot_items.cpp" />
+    <ClCompile Include="..\libVRender\lib\imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="..\libVRender\messyengine_impl.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shell.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\libVRender\lib\imgui\imconfig.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
