--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -42,10 +42,13 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(EmscriptenDir)/cache/ports/freetype/FreeType-version_1/include;../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
       <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalOptions>-sASYNCIFY -sASYNCIFY_ADVISE -sASYNCIFY_IGNORE_INDIRECT=1  -sINITIAL_MEMORY=200MB -sSTACK_SIZE=100MB -s ALLOW_MEMORY_GROWTH=1 -lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s USE_FREETYPE=1 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING  -lidbfs.js  -sEXPORTED_FUNCTIONS=_main,_onmessage,_ontouch -sEXPORTED_RUNTIME_METHODS=ccall,cwrap,_malloc %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
+      <GenerateDebugInformation>MoreDebugInformation</GenerateDebugInformation>
+      <SourceMapBase>http://127.0.0.1:8081/debug/</SourceMapBase>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(OutDir)*.*" "$(SolutionDir)x64\LibraryDebug\htdocs" /E /I /Y</Command>
@@ -58,6 +61,7 @@
       <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
       <OptimizationLevel>O0</OptimizationLevel>
       <GenerateDebugInformation>FullDebug</GenerateDebugInformation>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalOptions>-sASYNCIFY -sASYNCIFY_ADVISE -sASYNCIFY_IGNORE_INDIRECT=1 -sINITIAL_MEMORY=200MB -sSTACK_SIZE=100MB -s ALLOW_MEMORY_GROWTH=1 -lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING -gsource-map --source-map-base "http://127.0.0.1:8081/debug/" -lidbfs.js -sEXPORTED_FUNCTIONS=_main,_onmessage,_ontouch -sEXPORTED_RUNTIME_METHODS=ccall,cwrap,_malloc %(AdditionalOptions)</AdditionalOptions>
@@ -83,6 +87,7 @@
     <ClCompile Include="..\libVRender\lib\imgui\implot_items.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="..\libVRender\messyengine_impl.cpp" />
+    <ClCompile Include="..\libVRender\utilities.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
