--- a/webVRender/webVRender.vcxproj.filters
+++ b/webVRender/webVRender.vcxproj.filters
@@ -37,6 +37,7 @@
     <ClCompile Include="..\libVRender\lib\imgui\misc\freetype\imgui_freetype.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
+    <ClCompile Include="..\libVRender\utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
