--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -5,6 +5,10 @@
       <Configuration>Release</Configuration>
       <Platform>Emscripten</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="RelWithSymbol|Emscripten">
+      <Configuration>RelWithSymbol</Configuration>
+      <Platform>Emscripten</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="WebDebug|Emscripten">
       <Configuration>WebDebug</Configuration>
       <Platform>Emscripten</Platform>
@@ -17,6 +21,11 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|Emscripten'">
+    <ConfigurationType>HTMLPage</ConfigurationType>
+    <PlatformToolset>emcc</PlatformToolset>
+    <EmscriptenDir>D:\ref\emscripten\upstream\emscripten</EmscriptenDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='RelWithSymbol|Emscripten'" Label="Configuration">
     <ConfigurationType>HTMLPage</ConfigurationType>
     <PlatformToolset>emcc</PlatformToolset>
     <EmscriptenDir>D:\ref\emscripten\upstream\emscripten</EmscriptenDir>
@@ -35,6 +44,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Emscripten'">
     <IncludePath>../libVRender;../libVRender/lib/imgui;./includes;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='RelWithSymbol|Emscripten'">
+    <IncludePath>../libVRender;../libVRender/lib/imgui;./includes;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='WebDebug|Emscripten'">
     <IncludePath>../libVRender;../libVRender/lib/imgui;./includes;$(IncludePath)</IncludePath>
   </PropertyGroup>
@@ -43,12 +55,33 @@
       <AdditionalIncludeDirectories>$(EmscriptenDir)/cache/ports/freetype/FreeType-version_1/include;../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
       <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <OptimizationLevel>O3</OptimizationLevel>
     </ClCompile>
     <Link>
       <AdditionalOptions>-sASYNCIFY -sASYNCIFY_ADVISE -sASYNCIFY_IGNORE_INDIRECT=1  -sINITIAL_MEMORY=200MB -sSTACK_SIZE=100MB -s ALLOW_MEMORY_GROWTH=1 -lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s USE_FREETYPE=1 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING  -lidbfs.js  -sEXPORTED_FUNCTIONS=_main,_onmessage,_ontouch -sEXPORTED_RUNTIME_METHODS=ccall,cwrap,_malloc %(AdditionalOptions)</AdditionalOptions>
       <HtmlShellFile>shell.html</HtmlShellFile>
-      <GenerateDebugInformation>MoreDebugInformation</GenerateDebugInformation>
+      <GenerateDebugInformation>NoDebugInformation</GenerateDebugInformation>
       <SourceMapBase>http://127.0.0.1:8081/debug/</SourceMapBase>
+      <LinkerOptimizationLevel>Os</LinkerOptimizationLevel>
+    </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(OutDir)*.*" "$(SolutionDir)x64\LibraryDebug\htdocs" /E /I /Y</Command>
+      <Message>copy to test.</Message>
+    </PostBuildEvent>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='RelWithSymbol|Emscripten'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>$(EmscriptenDir)/cache/ports/freetype/FreeType-version_1/include;../libVRender;../libVRender/lib/imgui;./includes;../libVRender/lib/sokol</AdditionalIncludeDirectories>
+      <AdditionalOptions>-s USE_GLFW=3 %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <OptimizationLevel>O3</OptimizationLevel>
+    </ClCompile>
+    <Link>
+      <AdditionalOptions>-sASYNCIFY -sASYNCIFY_ADVISE -sASYNCIFY_IGNORE_INDIRECT=1  -sINITIAL_MEMORY=200MB -sSTACK_SIZE=100MB -s ALLOW_MEMORY_GROWTH=1 -lwebsocket.js -lGL -s USE_WEBGL2=1 -s USE_GLFW=3 -s FULL_ES3=1 --preload-file data -s WASM=1 -Iimgui -Iimgui/backends  -s USE_GLFW=3 -s USE_FREETYPE=1 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s USE_FREETYPE=1 -sNO_DISABLE_EXCEPTION_CATCHING  -lidbfs.js  -sEXPORTED_FUNCTIONS=_main,_onmessage,_ontouch -sEXPORTED_RUNTIME_METHODS=ccall,cwrap,_malloc %(AdditionalOptions)</AdditionalOptions>
+      <HtmlShellFile>shell.html</HtmlShellFile>
+      <GenerateDebugInformation>WithDebugInformation</GenerateDebugInformation>
+      <SourceMapBase>http://127.0.0.1:8081/debug/</SourceMapBase>
+      <LinkerOptimizationLevel>Os</LinkerOptimizationLevel>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(OutDir)*.*" "$(SolutionDir)x64\LibraryDebug\htdocs" /E /I /Y</Command>
