update implot, add implot_demo button, add build-events

--- a/CycleGUI/CycleGUI.csproj
+++ b/CycleGUI/CycleGUI.csproj
@@ -30,4 +30,8 @@
 		<OutputPath>D:\src\CycleGUI\x64\LibraryDebug</OutputPath>
 	</PropertyGroup>
 
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	  <Exec Command="if not exist D:\MDCS\Dependencies\Commons\ mkdir D:\MDCS\Dependencies\Commons\&#xD;&#xA;xcopy &quot;$(TargetDir)$(TargetFileName)&quot; &quot;D:\MDCS\Dependencies\Commons\&quot; /y&#xD;&#xA;&#xD;&#xA;if not exist D:\MDCS\Runtimes\Medulla\ mkdir D:\MDCS\Runtimes\Medulla\&#xD;&#xA;xcopy &quot;$(TargetDir)libVRender.dll&quot; &quot;D:\MDCS\Runtimes\Medulla\&quot; /y" />
+	</Target>
+
 </Project>
