--- a/webVRender/webVRender.vcxproj
+++ b/webVRender/webVRender.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="..\libVRender\lib\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\imgui_widgets.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\implot.cpp" />
+    <ClCompile Include="..\libVRender\lib\imgui\implot_demo.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\implot_items.cpp" />
     <ClCompile Include="..\libVRender\lib\imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="..\libVRender\messyengine_impl.cpp" />
