--- a/libVRender/libVRender.vcxproj
+++ b/libVRender/libVRender.vcxproj
@@ -174,6 +174,7 @@
     <None Include="shaders\ambient_occlusion.glsl" />
     <None Include="shaders\composer.glsl" />
     <None Include="shaders\depth_blur.glsl" />
+    <None Include="shaders\grating_display.glsl" />
     <None Include="shaders\utilities.glsl" />
     <None Include="shaders\gen_shaders.bat" />
     <None Include="shaders\gltf.glsl" />
